# graphite

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LibFindMacros  README.md
core/: CMakeLists.txt
core/adjudicator/: GSSWAdjudicator.cpp  GSSWAdjudicator.h  IAdjudicator.h  IGraphAdjudicator.h
core/alignment/: Alignment.cpp  AlignmentList.cpp  AlignmentList.h  AlignmentManager.hpp  AlignmentReader.cpp  AlignmentReader.h  AlignmentReaderManager.hpp  AlignmentReport.cpp  AlignmentReport.h  AlignmentReporter.cpp  AlignmentReporter.h  BamAlignment.cpp  BamAlignment.h  BamAlignmentManager.cpp  BamAlignmentManager.h  BamAlignmentReader.cpp  BamAlignmentReader.h  BamAlignmentReaderManager.cpp  BamAlignmentReaderManager.h  BamAlignmentReaderPreloadManager.cpp  BamReader.h  HTSLibAlignment.cpp  HTSLibAlignment.h  HTSLibAlignmentManager.cpp  HTSLibAlignmentManager.h  HTSLibAlignmentReader.cpp  HTSLibAlignmentReader.h  IAlignment.h  IAlignmentList.h  IAlignmentManager.h  IAlignmentReader.h  IAlignmentReaderManager.h  Sample.hpp  SampleManager.hpp  SamtoolsAlignmentReader.cpp  SamtoolsAlignmentReader.h
core/alignments/: BamAlignment.cpp  BamAlignmentReader.cpp  BamAlignmentReader.h  BamAlignmentReaderPreload.h  BamAlignmentReaderPreloadManager.cpp  BamAlignmentReaderPreloadManager.h  IAlignment.h  IAlignmentReader.h
core/allele/: Allele.cpp  Allele.h  AlleleMetaData.h  EquivalentAllele.h  IAllele.h  VCFAllele.h
core/bam/: Alignment.h  AlignmentReader.cpp  AlignmentReader.h  BamAlignment.h  BamReader.cpp  BamReader.h
core/file/: ASCIIFileReader.cpp  ASCIIFileReader.h  ASCIIFileWriter.cpp  ASCIIFileWriter.h  ASCIIGZFileReader.cpp  ASCIIGZFileReader.h  BGZFFileWriter.cpp  BGZFFileWriter.h  BamFileReader.cpp  BamFileReader.h  BamFileWriter.cpp  BamFileWriter.h  BamHeaderReader.cpp  BamHeaderReader.h  FastaFileWriter.cpp  FastaFileWriter.h  IFile.h  IFileWriter.h  SAMFileWriter.cpp  SAMFileWriter.h
core/genotyper/: GenotyperAllele.hpp  IGenotyper.h  IGenotyperVariant.h
core/graph/: GSSWGraph.cpp  GSSWGraph.h  Graph.cpp  Graph.h  GraphManager.cpp  GraphManager.h  GraphProcessor.cpp  GraphProcessor.h  GraphTraceback.hpp  IEdge.h  IGraph.h  INode.h  Node.cpp  Node.h  ReferenceGraph.cpp  ReferenceGraph.h  Traceback.cpp  Traceback.h
core/mapping/: GSSWMapping.cpp  GSSWMapping.h  IMapping.h  MappingAlignmentInfo.h  MappingManager.cpp  MappingManager.h  NodeInfo.h
core/parser/: ChromParser.hpp  InfoFieldParser.hpp  PositionParser.hpp  RegionParser.hpp  VCFParser.hpp
core/path/: IPath.h  Path.cpp  Path.h  PathManager.cpp  PathManager.h
core/reference/: FastaReference.cpp  FastaReference.h  FastaWriter.cpp  FastaWriter.h  IReference.h  Reference.cpp  Reference.h
core/region/: Region.cpp  Region.h  RegionParser.hpp
core/sample/: Sample.h  SampleManager.cpp  SampleManager.h
core/sequence/: Sequence.h  SequenceManager.cpp  SequenceManager.h
core/util/: GraphPrinter.cpp  GraphPrinter.h  Parameters.cpp  Parameters.h  Params.cpp  Params.h  SharedCreator.hpp  ThreadPool.hpp  Types.h  Utility.cpp  Utility.h  VisualizationToolKit.cpp  VisualizationToolKit.h
core/utils/: Parameters.cpp  Parameters.h  ThreadPool.hpp
core/utils/file/: ASCIIFileReader.h  ASCIIFileWriter.cpp  ASCIIGZFileReader.cpp  ASCIIGZFileReader.h  IFile.h
core/variant/: ChromParser.hpp  IHeader.h  IVariant.h  IVariantList.h  IVariantManager.h  InfoFieldParser.hpp  VCFFileReader.cpp  VCFFileReader.h  VCFFileWriter.cpp  VCFFileWriter.h  VCFFileWriterManager.hpp  VCFHeader.cpp  VCFHeader.h  VCFList.cpp  VCFList.h  VCFManager.cpp  VCFManager.h  VCFParser.hpp  VCFVariant.h  Variant.cpp  Variant.h  VariantFile.h  VariantList.cpp  VariantList.h  VariantListVCFPreloaded.cpp
core/variants/: ChromParser.hpp  IAllele.h  IVariant.h  IVariantList.h  IVariantListPreloaded.h  InfoFieldParser.hpp  PositionParser.hpp  VCFFileReader.cpp  VCFFileReader.h  VCFParser.hpp  Variant.cpp  Variant.h  VariantList.h  VariantListVCFPreloaded.cpp
core/vcf/: VCFReader.cpp  VCFReader.h  VCFWriter.cpp  VCFWriter.h  Variant.cpp  Variant.h
plugins/adjudicator/: CMakeLists.txt
plugins/adjudicator/graph/: AdjudicatorGraph.cpp  AdjudicatorGraph.h  AlignmentReport.cpp  AlignmentReport.h  AlignmentReporter.cpp  AlignmentReporter.h  GSSWAdjudicator.cpp  GSSWAdjudicator.h  GSSWGraph.cpp  GSSWGraph.h  GSSWMapping.cpp  GSSWMapping.h  GraphManager.cpp  GraphManager.h  VariantContig.cpp  VariantContig.h
plugins/adjudicator/tests/: AdjudicatorGraphTests.hpp  GSSWGraphTests.hpp  TestIncludes.h  VariantContigTests.hpp
plugins/gssw/: CMakeLists.txt
plugins/gssw/graph/: AlignmentReport.cpp  (+11 more)
plugins/pathtrace/: CMakeLists.txt
plugins/vg/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: IReference.h  IVariant.h  Reference.cpp  Reference.h  Region.cpp  Region.h  RegionParser.hpp  Variant.cpp  Variant.h  VariantFile.h
src/graph/: IEdge.h  IGraph.cpp  IGraph.h  INode.h  SparseGraph.cpp  SparseGraph.h
src/tools/: gwiz.cpp
src/utils/: NonCopyable.h  Parameters.h
tests/: '  AdjudicationTests.hpp  AlleleTests.hpp  BamAlignmentManagerTests.hpp  BamAlignmentReaderTests.hpp  BamAlignmentTests.hpp  BamHeaderReaderTests.hpp  BamHeaderTests.hpp  BuildGraphTests.hpp  CMakeLists.txt  CompoundVariantTests.hpp  FastaReferenceTests.hpp  FileTests.hpp  GSSWGraphTests.hpp  GSSWTests.hpp  GZFileTests.hpp  GraphPathAlignmentTests.hpp  GraphPathFastaTests.hpp  GraphPathRefTests.hpp  HTSLibAlignmentReaderTests.hpp  IntegrationTests.hpp  ReferenceTest.hpp  RegionTests.hpp  S3FileTests.hpp  SSWTests.hpp  SequenceManagerTests.hpp  TestClasses.hpp  VCFFileTests.hpp  VariantListVCFPreloadedTests.hpp  VariantsTest.hpp  gtest_main.cpp  temp.hpp  test.txt
tests/classes/: TestAlignment.hpp  TestAlignmentReader.hpp  TestAlignmentReaderManager.hpp  TestReference.h  TestReference.hpp  TestReferenceVariantFactory.h  TestReferenceVariantGenerator.hpp  TestVariantList.h  TestVariantList.hpp
tests/data/: TestSamHeader.sam  test.bam.bai  test.fasta  test.fasta.fai  test.vcf
tools/: CMakeLists.txt  graphite.cpp  graphite_side.cpp  gssw.cpp  gwiz.cpp  pathtrace.cpp
(+124 files in other folders)
